# afsp

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
afsp/: __init__.py
afsp/api/: __init__.py  agents.py  auth.py  main.py  tokens.py  views.py
afsp/cli/: __init__.py  main.py
afsp/db/: __init__.py  db.py  schema.sql
afsp/runtime/: __init__.py  enforcement.py  materialise.py  pathutil.py  projection.py  sgt_mount.py  watcher.py
afsp/store/: __init__.py  local.py  s3.py
examples/analyst/: afsp.yml
examples/cfo/: afsp.yml
examples/coding-agent/: afsp.yml
tests/: conftest.py  test_auth.py  test_db.py  test_e2e.py  test_enforcement.py  test_materialise.py  test_projection.py  test_security.py  test_sgt_mount.py  test_tokens.py  test_views.py  test_watcher.py
